--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@reduxjs/toolkit": "^2.2.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "sharp": "^0.33.4",
+    "sonner": "^1.5.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
