--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/react-facebook-login": "^4.1.11",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "config": "^3.3.12",
@@ -26,8 +27,10 @@
     "react-hook-form": "^7.52.0",
     "react-redux": "^9.1.2",
     "sharp": "^0.33.4",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.3.0"
   },
