--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/react-facebook-login": "^4.1.11",
     "@types/uuid": "^10.0.0",
@@ -31,6 +32,7 @@
     "sonner": "^1.5.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.3.0"
   },
