--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
   "devDependencies": {
     "@types/config": "^3.3.4",
     "@types/emoji-mart": "^3.0.14",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "lodash": "^4.17.21",
     "postcss": "^8",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
