--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-spring/web": "^9.7.4",
     "@reduxjs/toolkit": "^2.2.5",
     "@use-gesture/react": "^10.3.1",
     "class-variance-authority": "^0.7.0",
