--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@react-spring/web": "^9.7.4",
+    "@radix-ui/react-switch": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.5",
-    "@use-gesture/react": "^10.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "config": "^3.3.12",
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.6.0",
     "input-otp": "^1.2.4",
