--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.3.0",
     "emoji-mart": "^5.6.0",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
@@ -27,10 +28,12 @@
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
+    "react-file-icon": "^1.5.0",
     "react-hook-form": "^7.52.0",
     "react-redux": "^9.1.2",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "tailwindcss-animate": "^1.0.7",
@@ -45,6 +48,8 @@
     "@types/node": "^20",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18",
+    "@types/react-file-icon": "^1.0.4",
+    "@types/sharp": "^0.32.0",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
