--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ name: msgbits
 
 services:
   frontend:
+    image: ${DOCKER_REPO}/frontend:${GITHUB_SHA}
     build:
       context: .
       dockerfile: Dockerfile
