updated deploy yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,5 +76,5 @@ jobs:
           export GITHUB_SHA=${GITHUB_SHA}
           docker-compose pull
           docker-compose up -d
-          docker-system prune -af
+          docker system prune -af
         "
