updated deploy yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,23 +29,11 @@ jobs:
         DOCKER_REPO: ${{ secrets.DOCKERHUB_USERNAME }}
         GITHUB_SHA: ${{ github.sha }}
       run: |
-        # Pull Redis image explicitly
-        docker pull redis:7.0-alpine
-
         # Build all services
         docker compose build
 
         # Tag and push each service
-        docker compose config --format json | jq -r '.services | to_entries[] | .key as $service | .value.image // .value.name | select(. != null) | [$service, .] | @tsv' | while read service image; do
-          
-          if [ "$service" = "redis" ]; then
-            # For Redis, use the pulled image
-            image="redis:7.0-alpine"
-          else
-            # For other services (like backend), use the built image
-            image="${DOCKER_REPO}/${service}"
-          fi
-
+        docker compose config --format json | jq -r '.services | to_entries[] | .key as $service | .value.image | select(. != null) | [$service, .] | @tsv' | while read service image; do
           # Tag with SHA
           docker tag $image ${DOCKER_REPO}/${service}:${GITHUB_SHA}
           docker push ${DOCKER_REPO}/${service}:${GITHUB_SHA}
@@ -55,19 +43,25 @@ jobs:
           docker push ${DOCKER_REPO}/${service}:latest
         done
 
-
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
 
-    - name: store private key
+    - name: Create .env.production file
+      run: |
+        echo "${{ secrets.ENV_PROD }}" > .env.production
+
+    - name: Copy files to EC2
       env:
         PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+        HOST: ${{ secrets.EC2_HOST }}
+        USER: ubuntu
       run: |
         echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-        
+        scp -i private_key -o StrictHostKeyChecking=no docker-compose.yml ${USER}@${HOST}:~/docker-compose.yml
+        scp -i private_key -o StrictHostKeyChecking=no .env.production ${USER}@${HOST}:~/.env.production
 
     - name: Deploy to EC2 with Docker Compose
       env:
@@ -77,8 +71,7 @@ jobs:
         DOCKER_REPO: ${{ secrets.DOCKERHUB_USERNAME }}
         GITHUB_SHA: ${{ github.sha }}
       run: |
-        ssh  -o IdentityFile=<(echo "$PRIVATE_KEY") \
-         -o StrictHostKeyChecking=no ${USER}@${HOST} "
+        ssh -i private_key -o StrictHostKeyChecking=no ${USER}@${HOST} "
           export DOCKER_REPO=${DOCKER_REPO}
           export GITHUB_SHA=${GITHUB_SHA}
           docker-compose pull
