--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,11 +9,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Create .env.production file
-      run: |
-        echo "${{ secrets.ENV_PROD }}" > .env.production
+    - uses: actions/checkout@v4
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -47,7 +43,7 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Copy files to EC2
       env:
@@ -66,12 +62,24 @@ jobs:
         USER: ubuntu
         DOCKER_REPO: ${{ secrets.DOCKERHUB_USERNAME }}
         GITHUB_SHA: ${{ github.sha }}
+        ENV_PROD: ${{ secrets.ENV_PROD }}
       run: |
         ssh -i private_key -o StrictHostKeyChecking=no ${USER}@${HOST} "
           cd ~/msgbits/frontend
           export DOCKER_REPO=${DOCKER_REPO}
           export GITHUB_SHA=${GITHUB_SHA}
+
+          echo 'Pulling latest images...'
           docker-compose pull
-          docker-compose up -d
-          docker system prune -af
+
+          echo 'Starting services...'
+          echo "$ENV_PROD" > temp_env_file
+          docker-compose --env-file temp_env_file up -d
+          rm temp_env_file
+          
+          echo 'Pruning old images and containers...'
+          docker image prune -af
+          docker container prune -f
+          
+          echo 'Deployment complete'
         "
