--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ name: msgbits
 
 services:
   frontend:
-    image: ${DOCKER_REPO}/frontend:${GITHUB_SHA}
+    # image: ${DOCKER_REPO}/frontend:${GITHUB_SHA}
     build:
       context: .
       dockerfile: Dockerfile
@@ -10,6 +10,8 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
+    env_file:
+      - ./.env.production  # Add this line  
     networks:
       - frontend-network
 
