--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-file-icon": "^1.5.0",
     "react-hook-form": "^7.52.0",
     "react-redux": "^9.1.2",
+    "react-zoom-pan-pinch": "3.4.4",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
